<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/apl_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:elevation="7dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/toolbar_text_change_password"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/cv_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp">

        <RelativeLayout
            android:id="@+id/rl_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_dialog_tittle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main_color"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/dialog_banner_change_password_textview"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_camera_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_dialog_tittle"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edt_user_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/dialog_bg"
                    android:digits="@string/useremail_text"
                    android:hint="@string/edt_old_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/edt_user_new_password_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_user_old_password"
                    android:layout_margin="10dp"
                    android:background="@drawable/dialog_bg"
                    android:digits="@string/useremail_text"
                    android:hint="@string/edt_new_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/edt_user_confirm_new_password_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_user_new_password_one"
                    android:layout_margin="10dp"
                    android:background="@drawable/dialog_bg"
                    android:digits="@string/useremail_text"
                    android:hint="@string/edt_confirm_new_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/rl_camera_gallery"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/dialog_change_password_btn_bg">

                <TextView
                    android:id="@+id/tv_dialog_password_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:padding="10dp"
                    android:text="@string/dialog_cancel_textview"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/rl_camera_gallery"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/dialog_change_password_btn_bg">

                <TextView
                    android:id="@+id/tv_dialog_password_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:padding="10dp"
                    android:text="@string/dialog_ok_textview"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>