<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_varification">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_help_support_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:elevation="7dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/toolbar_text_help_support"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_help_support_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_help_support_appbar"
        android:layout_marginBottom="100dp">


        <RelativeLayout
            android:id="@+id/rl_main_content_help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tv_your_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text_your_query"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:text=""
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/tv_your_query_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_your_query"
                android:layout_margin="10dp"
                android:hint="@string/text_your_query_description"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:text=""
                android:textColorHint="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_text_mail_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_your_query_description"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/text_mail_us"
                android:textColor="@color/whitee"
                android:textSize="20sp" />


            <android.support.v7.widget.CardView
                android:id="@+id/cv_mail_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/tv_text_mail_us"
                android:layout_margin="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red">


                    <TextView
                        android:id="@+id/tv_mail_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/text_mail_us_id"
                        android:textColor="@color/whitee"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>


    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/cv_help_support_send_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:visibility="gone"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp">

        <TextView
            android:id="@+id/tv_help_support_send_query_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/btn_send_query"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>


</RelativeLayout>